--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
+      <configuration>
+        <source>17</source>
+        <target>17</target>
+      </configuration>
       <scope>test</scope>
     </dependency>
   </dependencies>
