--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
         <configuration>
           <source>17</source>
           <target>17</target>
+         <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <mainClass>com.maven.demo.Main</mainClass> 
+          </manifest>
+        </archive>
         </configuration>
       </plugin>
     </plugins>
